---------------------------------------------------------------------------------------------------
Version: 0.9.15
Date: 08. 08. 2019
  Added:
    - Signal color support for Angel's Refining and Angel's Smelting modded items
    - Support for built in mod incompatibility listing
  Changed:
    - Sign icon selection GUI is now draggable
---------------------------------------------------------------------------------------------------
Version: 0.9.14
Date: 03. 06. 2019
  Changed:
    - Adjusted Grid concrete textures to improve overall look (thanks to kirazy)
  Locales:
    - Updated Russian translation (thanks to 1avek1)
---------------------------------------------------------------------------------------------------
Version: 0.9.13
Date: 31. 05. 2019
  Added:
    - New Stone wall graphics including HR version (thanks to kirazy)
  Locales:
    - Updated Polish translation (thanks to Requelfade)
---------------------------------------------------------------------------------------------------
Version: 0.9.12
Date: 09. 05. 2019
  Added:
    - Ability to select Empty barrel icon when placing signs
  Bugfixes:
    - Adjusted sign GUI constraints to avoid it being drawn inside a scroll pane at certain resolutions
  Locales:
    - Updated French translation (thanks to daikyraraga)
    - Updated Chinese Traditional translation (thanks to k98a)
    - Updated Korean translation (thanks to GimoXagros)
---------------------------------------------------------------------------------------------------
Version: 0.9.11
Date: 29. 04. 2019
  Added:
    - Signal color support for Sulfur and KS Power mod's Diesel fuel fluid
    - Ability to craft red and brown tree variants
  Changed:
    - Updated Concrete wall icons to match 0.17 style
  Locales:
    - Updated Czech translation (thanks to Treij)
    - Updated Russian translation (thanks to 1avek1)
---------------------------------------------------------------------------------------------------
Version: 0.9.10